--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -7,14 +7,22 @@ spring:
   redis:
     host: localhost
     port: 6379
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          public-key-location: classpath:certs/publicKey.pem
+  datasource:
+    url: jdbc:mysql://localhost:3306/ram
+    username: root
+    password:
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate.dialect: org.hibernate.dialect.MySQL8Dialect
+    show-sql: true
 
-#  datasource:
-#    url: jdbc:mysql://localhost:3306/ram
-#    username: root
-#    password:
-#  jpa:
-#    hibernate:
-#      ddl-auto: update
-#    properties:
-#      hibernate.dialect: org.hibernate.dialect.MySQL8Dialect
-#    show-sql: true
+jwt:
+  rsa-private-key: classpath:certs/privateKey.pem
+  rsa-public-key: classpath:certs/publicKey.pem
