--- a/Authentication/src/main/resources/application.yml
+++ b/Authentication/src/main/resources/application.yml
@@ -7,9 +7,9 @@ spring:
         jwt:
           public-key-location: classpath:certs/publicKey.pem
   datasource:
-    url: ${DATABASE_URL:jdbc:mysql://localhost:3306/ram}
-    username: ${DATABASE_USERNAME:root}
-    password: ${DATABASE_PASSWORD:} #rootpassword
+    url: jdbc:mysql://localhost:3306/ram # //jdbc:mysql://localhost:3306/ram
+    username: root
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
