--- a/cricket-service/src/main/resources/application.yml
+++ b/cricket-service/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/ram
     username: root
-    password:
+    password: root
   jpa:
     hibernate:
       ddl-auto: update
