--- a/cricket-service/src/main/resources/application.yml
+++ b/cricket-service/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
 spring:
   application:
     name: cricket-service
+  profiles:
+    active: dev
   redis:
     host: localhost
     port: 6379
@@ -10,7 +12,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/ram
     username: root
-    password:
+    password: root
   jpa:
     hibernate:
       ddl-auto: update
@@ -19,11 +21,25 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
 
+  quartz:
+    job-store-type: jdbc
+    jdbc:
+      initialize-schema: never  #never, always
+    threadPool:
+      threadCount: 5
+      threadPriority: 5
+    properties:
+      org:
+        quartz:
+          scheduler:
+            instanceName: MyScheduler
+
 
 rapid:
   baseURL: https://cricbuzz-cricket.p.rapidapi.com/
   urls:
-    teams: teams/v1/international
-    series: series/v1/international
+    teams: teams/v1/
+    series: series/v1/
     matchDetailsUrl: series/v1/
     leanback: mcenter/v1/
+    matches: matches/v1/  #live|recent|upcoming as params
