--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/ram
     username: root
-    password:
+    password: root
   jpa:
     hibernate:
       ddl-auto: update
