--- a/question-generator/src/main/resources/application.yml
+++ b/question-generator/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/ram
     username: root
-    password:
+    password: root
   jpa:
     hibernate:
       ddl-auto: update
