--- a/cricket-service/src/main/resources/application.yml
+++ b/cricket-service/src/main/resources/application.yml
@@ -8,6 +8,11 @@ spring:
   redis:
     host: localhost
     port: 6379
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
   datasource:
     url: jdbc:mysql://localhost:3306/ram
@@ -24,7 +29,7 @@ spring:
   quartz:
     job-store-type: jdbc
     jdbc:
-      initialize-schema: never  #never, always
+      initialize-schema: always  #never, always
     threadPool:
       threadCount: 5
       threadPriority: 5
@@ -34,7 +39,6 @@ spring:
           scheduler:
             instanceName: MyScheduler
 
-
 rapid:
   baseURL: https://cricbuzz-cricket.p.rapidapi.com/
   urls:
@@ -43,3 +47,18 @@ rapid:
     matchDetailsUrl: series/v1/
     leanback: mcenter/v1/
     matches: matches/v1/  #live|recent|upcoming as params
+    scoreCard: /mcenter/v1/  #matchId/hscard this is the full url
+
+jwt:
+  rsa-private-key: classpath:certs/privateKey.pem
+  rsa-public-key: classpath:certs/publicKey.pem
+
+eureka:
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/ # ${ EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:
+  instance:
+    preferIpAddress: true
+    hostname: ${HOSTNAME:localhost}
